--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,13 @@ theme: jekyll-agency
 url    : "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 
-title      : Your Awesome Website
-email      : your-email@example.com #this is also the email contact forms will go to
-description: "Site description"
+title      : 기탄사고력교실남양주구리본부
+email      : hyunii1982@gmail.com #this is also the email contact forms will go to
+description: "기탄사고력교실 남양주 구리본부 공식 사이트"
 author     : Your Name
 # logo:     #optional, defaults to site title
   # path: assets\img\clients\creative-market.jpg
   # height: 60 #height in px, defaults to 52px
-
 locale: "en-US" # See available languages in _data/sitetext.yml
 
 analytics:
