--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,20 +11,14 @@
 # -----------------
 en: &DEFAULT_EN
   nav:
-    - title: "Services"
+    - title: "가맹과정"
       section: services
-    - title: "Portfolio"
+    - title: "가맹 장점"
       section: portfolio
-    - title: "About"
+    - title: "자세히 알아보기"
       section: about
-    - title: "Timeline"
-      section: timeline
-    - title: "Team"
-      section: team
-    - title: "Contact"
+    - title: "가맹 문의"
       section: contact
-    - title: "Theme Source"
-      url: https://github.com/raviriley/agency-jekyll-theme/
 en-US:
   <<: *DEFAULT_EN
 en-CA:
